code/hls/stream2mem/solution1/solution1.log
==============================================================
File generated on Sat Jul 13 11:23:22 +0800 2019
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg400-2'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'stream2mem/stream2mem.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from stream2mem/stream2mem.cpp:1:
stream2mem/stream2mem.cpp:17:3: error: use of undeclared identifier 'memcpy'
  memcpy(pMemPort+to, from, len);
  ^
1 error generated.
